--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -345,6 +345,7 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
   \item Note: For an alternative proof using \prefpp{cor:YaXb}
               rather than the \thme{Inverse probability integral transform} \xref{thm:its},
               see \prefpp{ex:ppy_2x1b}.
+
 \end{enumerate}
 \end{proof}
 
@@ -426,6 +427,7 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
     \end{align*}
   \item By the \thme{Inverse probability integral transform} \xref{thm:its}, $\rvY\eqd\ff(\rvX)$ has the
         desired pdf $\fN_1(x)$.
+
 \end{enumerate}
 \end{proof}
 
@@ -496,7 +498,7 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
         && \text{by definition of $\ppy$ \xref{def:pdf}}
       \\&= \ddy\psp\setn{\ff(\rvX)\le y}
         && \text{by hypothesis (1)}
-      \\&= \ddy\sum_{n=1}^{\xN+1} \psp\set{\ff(\rvX)\le y}{\rvX\in\setA_n}
+      \\&= \ddy\sum_{n=1}^{\xN+1} \psp\setn{\brs{\ff(\rvX)\le y}\land\brs{\rvX\in\setA_n}}
         && \text{by \thme{sum of products} \xref{thm:psp_sop}}
       \\&= \ddy\sum_{n=1}^{\xN+1} \pPc{\ff(\rvX)\le y}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n}
         && \text{by definition of $\psp\setn{\setX|\setY}$ \xref{def:conP}}
@@ -515,14 +517,14 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
             \sum_{n=1}^{\xN+1} \brs{1-\psp\set{\rvX \le \fgi_n(y)}{\rvX\in\setA_n}}  & otherwise
            \end{array}}\quad\text{by definition of $\psp\setn{\setX|\setY}$}}
       \\&= \mathrlap{\ddy\brb{\begin{array}{>{\ds}lM}
-            \sum_{n=1}^{\xN+1} \brp{\psp\setn{\rvX \le \fgi_n(y)}-\psp\setn{\rvX < \min\setA_{n-1}}}        & for $\ffp(x)\ge0$ \\
-            \sum_{n=1}^{\xN+1} \brs{1-\brp{\psp\setn{\rvX \le \fgi_n(y)}-\psp\setn{\rvX<\min\setA_{n-1}}}}  & otherwise
+            \sum_{n=1}^{\xN+1} \brp{\psp\setn{\rvX \le \fgi_n(y)}-\psp\setn{\rvX < \min\setA_n}}        & for $\ffp(x)\ge0$ \\
+            \sum_{n=1}^{\xN+1} \brs{1-\brp{\psp\setn{\rvX \le \fgi_n(y)}-\psp\setn{\rvX<\min\setA_n}}}  & otherwise
            \end{array}}}
       \\&= \ddy\brb{\begin{array}{>{\ds}lM}
             \sum_{n=1}^{\xN+1} \psp\setn{\rvX \le \fgi_n(y)}          & for $\ffp(x)\ge0$ \\
             \sum_{n=1}^{\xN+1} \brs{1-\psp\setn{\rvX \le \fgi_n(y)}}  & otherwise
            \end{array}}
-        && \text{because $\ddy\psp\setn{\rvX<\text{a constant}}=0$}
+        && \text{because $\ddy\psp\setn{\rvX<\text{constant}}=0$}
       \\&= \brb{\begin{array}{>{\ds}lM}
             \sum_{n=1}^{\xN+1} \ddy\pcx\brs{\fgi_n(y)}         & for $\ffp(x)\ge0$ \\
             \sum_{n=1}^{\xN+1} \ddy\brs{1-\pcx\brp{\fgi_n(y)}} & otherwise
@@ -538,37 +540,6 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
         && \text{by \prefp{lem:ddyffi}}
     \end{align*}
 
-  %\item
-  %  \begin{align*}
-  %    &\ppy(y)
-  %    \\&\eqd \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\psp\setn{y \le Y < y+\varepsilon}
-  %      && \text{by def. of $\ppy$ \xref{def:pdf}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\psp\setn{y \le \ff(\rvX)< y+\varepsilon}
-  %      && \text{by hypothesis}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \psp\set{y \le \ff(\rvX)< y+\varepsilon}{\rvX\in\setA_n}
-  %      && \text{by \thme{sum of products} \xref{thm:psp_sop}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \pPc{y \le \ff(\rvX)< y+\varepsilon}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n}
-  %      && \text{by def. of $\psp\setn{\setX|\setY}$ \xref{def:conP}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \pPc{y \le \fg_n(\rvX)< y+\varepsilon}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n}
-  %      && \text{by def. of $\fg_n(x)$}
-  %    \\&= \mathrlap{\lim_{\varepsilon\to0}\frac{1}{\varepsilon}\brs{\begin{array}{>{\ds}lM}
-  %          \sum_{n=1}^{\xN+1} \pPc{\fgi_n(y) \le\rvX < \fgi_n(y+\varepsilon)}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n} & for $\ffp(x)\ge0$ \\
-  %          \sum_{n=1}^{\xN+1} \pPc{\fgi_n(y+\varepsilon) \le\rvX < \fgi_n(y)}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n} & otherwise
-  %         \end{array}}\quad\text{(by \pref{item:YfX_gn}}}
-  %    \\&= \mathrlap{\lim_{\varepsilon\to0}\frac{1}{\varepsilon}\brs{\begin{array}{>{\ds}lM}
-  %           \sum_{n=1}^{\xN+1} \pPc{\fgi_n(y)     \le\rvX < \fgi_n(y) + \frac{\varepsilon}{\ffp\brs{\fgi_n(y)}}}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n} & for $\ffp(x)\ge0$ \\
-  %           \sum_{n=1}^{\xN+1} \pPc{\fgi_n(y) + \frac{\varepsilon}{\ffp\brs{\fgi_n(y)}} \le\rvX < \fg_n(y)}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n}     & otherwise
-  %         \end{array}}\quad\text{by \pref{ilem:YfX_ffp}}}
-  %    \\&= \mathrlap{\lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \pPc{\fgi_n(y) \le\rvX < \fgi_n(y) + \frac{\varepsilon}{\abs{\ffp\brp{\fgi_n(y)}}}}{\rvX\in\setA_n}\psp\setn{\rvX\in\setA_n}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \psp\set{\fgi_n(y) \le\rvX < \fgi_n(y) + \frac{\varepsilon}{\abs{\ffp\brp{\fgi_n(y)}}}}{\rvX\in\setA_n}
-  %      && \text{by def. of $\psp\setn{\setX|\setY}$ \xref{def:conP}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \psp\setn{\fgi_n(y) \le\rvX < \fgi_n(y) + \frac{\varepsilon}{\abs{\ffp\brp{\fgi_n(y)}}}}
-  %      && \text{by def. of \structe{partition} \xref{def:partition}}
-  %    \\&= \lim_{\varepsilon\to0}\frac{1}{\varepsilon}\sum_{n=1}^{\xN+1} \frac{\varepsilon}{\abs{\ffp\brp{\fgi_n(y)}}} \ppx\brs{\fgi_n(y)}
-  %      && \text{by def. of $\ppx$ \xref{def:pdf}}
-  %    \\&= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ffp\brp{\fgi_n(y)}}}
-  %      && \text{by \prope{linearity} of $\sum$ operator}
-  %  \end{align*}
 \end{enumerate}
 \end{proof}
 
@@ -617,27 +588,6 @@ Let $a,b\in\R$.
         \end{align*}
     \end{enumerate}
 
-  %\item An alternative proof is as follows:
-  %  \begin{align*}
-  %    \ppy(y)h
-  %      &=  \psp\setn{y\le Y < y+h}
-  %    \\&=  \psp\setn{y\le a\rvX+b < y+h}
-  %    \\&=  \psp\setn{y-b\le a\rvX < y-b+h}
-  %    \\&=  \left\{\begin{array}{ll}
-  %            \psp\setn{\frac{y-b}{a}\le\rvX < \frac{y-b}{a}+\frac{1}{a}h} &\forall a>0 \\
-  %            \psp\setn{\frac{y-b}{a}\ge\rvX > \frac{y-b}{a}+\frac{1}{a}h} &\forall a<0
-  %          \end{array}\right.
-  %    \\&=  \left\{\begin{array}{ll}
-  %            \psp\setn{\frac{y-b}{a}\le\rvX < \frac{y-b}{a}+\frac{1}{|a|}h}  &\forall a>0 \\
-  %            \psp\setn{\frac{y-b}{a}-\frac{1}{|a|}h <\rvX \le \frac{y-b}{a}} &\forall a<0
-  %          \end{array}\right.
-  %    \\&=  \frac{1}{|a|}h \ppx\left(\frac{y-b}{a}\right)
-  %  \\\implies
-  %  \\
-  %    \ppy(y)
-  %      &=  \frac{1}{|a|} \ppx\left(\frac{y-b}{a}\right)
-  %  \end{align*}
-%\end{enumerate}
 \end{proof}
 
 %---------------------------------------
@@ -675,48 +625,6 @@ Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
 \end{align*}
 \end{proof}
 
-\begin{figure}\color{figcolor}
-\setlength{\unitlength}{0.3mm}
-\thicklines
-\begin{center}
-%\begin{footnotesize}
-\begin{picture}(350,200)(-100,-20)
-  {\color{axis}%
-    \put( -20,   0){\line(1,0){220}}
-    \put(   0, -20){\line(0,1){120}}
-    }
-  \put(   0, 110){\makebox(0,0)[r]{$y$}}
-  \put( 210,   0){\makebox(0,0)[r]{$x$}}
-  {\color{red}
-%    \qbezier(10,140)(60,10)(160,10)
-    \qbezier(20,150)(30,30)(150,20)
-    \put( 35, 105){\makebox(0,0)[l]{$y=\frac{1}{x}$}}
-    }
-  {\color{blue}% f(x)
-    \put(40,80){\line(1,-1){40}} %straight line
-    }
-  {\color{black}% f(x)
-    \qbezier[28](0,80)(20,80)(40,80)
-    \qbezier[50](40,0)(40,40)(40,80)
-    \qbezier[40](0,40)(40,40)(80,40)
-    \qbezier[20](80,0)(80,20)(80,40)
-    }
-  \put(  -5,  80){\makebox(0,0)[r]{$y+h$}}
-  \put(  -5,  40){\makebox(0,0)[r]{$y$}}
-  \put(  40,  -5){\makebox(0,0)[t]{$\frac{1}{y+h}$}}
-  \put(  80,  -5){\makebox(0,0)[t]{$\frac{1}{y}$}}
-  \put( 100,  60){\makebox(0,0)[l]{$\frac{\Delta y}{\Delta x}=\left.\frac{\dy}{\dx}\right|_{x=\frac{1}{y}}=-y^2$}}
-  \put(  95,  60){\vector(-1,0){35}}
-  \put( 100,  40){\makebox(0,0)[l]{$\frac{1}{y}+\frac{\Delta x}{\Delta y}\Delta y = \frac{1}{y} - \frac{1}{y^2}h$}}
-  \put(  95,  40){\vector(-3,-2){55}}
-\end{picture}
-%\end{footnotesize}
-\end{center}
-\caption{
-  $\rvY=\frac{1}{\rvX}$
-  \label{fig:Y=1/X}
-  }
-\end{figure}
 %---------------------------------------
 \begin{corollary}
 \footnote{
@@ -737,12 +645,12 @@ Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
 \end{corollary}
 \begin{proof}
 \begin{enumerate}
-  \item \label{item:Yf1X_ffp}
-        Note that $\ff(x)=1/x$ is a \prope{differentiable function} in $x>0$
+  \item lemma: \label{ilem:Yf1X_ffp}
+        $\ff(x)=1/x$ is a \prope{differentiable function} in $x>0$
         with $\xN=0$ \prope{critical point}s
         and $\ffp(x)=-1/x^2$.
-  \item \label{item:Yf1X_ffi}
-        The inverse of $\ff(x)$ is $\fg_1(y)=\ffi(y)=\frac{1}{y}$.
+  \item lemma: \label{ilem:Yf1X_ffi}
+        The inverse of $y=\fg_1(x)=\ff(x)=\frac{1}{x}$ is $x=\fgi_1(y)=\ffi(y)=\frac{1}{y}$.
   \item It follows that
     \begin{align*}
       \ppy(y)
@@ -750,104 +658,16 @@ Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
         && \text{by \prefpp{thm:YfX}}
       \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{\ff'\brp{\ffi(y)}}}
         && \text{because $\xN=0$}
+      \\&= \frac{\ppx\brp{\frac{1}{y}}}{\abs{\ff'\brp{\frac{1}{y}}}}
+        && \text{by \pref{ilem:Yf1X_ffi}}
       \\&= \frac{1}{\abs{-1/(1/y)^2}}\ppx\brp{\frac{1}{y}}
+        && \text{by \pref{ilem:Yf1X_ffp}}
       \\&= \frac{1}{y^2}\ppx\brp{\frac{1}{y}}
+        && \text{by definition of $\absn$}
     \end{align*}
 \end{enumerate}
-%\begin{enumerate}
-%  \item This follows from \prefpp{thm:YfX}:
-%    \begin{enumerate}
-%      \item The only root of $y=\sfrac{1}{x}$ is $x_1=\sfrac{1}{y}$.
-%      \item $\ff'(x) = -\frac{1}{x^2}$
-%      \item Then
-%        $\ds
-%          \ppy(y)
-%            = \sum_{n=1}^\xN \frac{\ppx(x_n)}{\abs{\ff'(x_n)}}
-%            = \frac{\ppx(x_1)}{|\ff'(x_1)|}
-%            = \frac{\ppx(1/y)}{|\ff'(1/y)|}
-%            = \frac{\ppx(1/y)}{y^2}
-%            = \frac{1}{y^2} \ppx\left( \frac{1}{y} \right)
-%        $
-%    \end{enumerate}
-%
-%%  \item Alternatively, this can be proved as follows:
-%%    \begin{enumerate}
-%%      \item lemma. \label{item:Yf1X}
-%%        Let $h\to0$. First we show a useful relation for $\frac{1}{y+h}$.
-%%        This relation is illustrated in \prefpp{fig:Y=1/X}.
-%%        \begin{align*}
-%%          \frac{1}{y+h}
-%%            &=    y_1 + \frac{1}{m} \Delta y
-%%          \\&=    \frac{1}{y} + \left.\frac{1}{dy/dx}\right|_{x=1/y} h
-%%          \\&=    \frac{1}{y} - \left.x^2\right|_{x=1/y} h
-%%          \\&=    \frac{1}{y} - \frac{1}{y^2} h
-%%        \end{align*}
-%%
-%%      \item Now we prove the theorem with some help from \pref{item:Yf1X}:
-%%        \begin{align*}
-%%          \ppy(y)h
-%%            &=    \psp\setn{y\le Y < y+h}
-%%          \\&=    \psp\setn{y\le \frac{1}{\rvX} < y+h}
-%%          \\&=    \psp\setn{\frac{1}{y}\ge\rvX > \frac{1}{y+h}}
-%%          \\&=    \psp\setn{\frac{1}{y}\ge\rvX > \frac{1}{y}-\frac{1}{y^2}h}
-%%          \\&=    \psp\setn{\frac{1}{y}-\frac{1}{y^2}h < \rvX \le \frac{1}{y} }
-%%          \\&=    \frac{1}{y^2}h \ppx\left( \frac{1}{y} \right)
-%%        \\\implies
-%%          \ppy(y)
-%%            &=    \frac{1}{y^2} \ppx\left( \frac{1}{y} \right)
-%%        \end{align*}
-%%    \end{enumerate}
-%%\end{enumerate}
 \end{proof}
 
-
-
-
-
-\begin{figure}\color{figcolor}
-\setlength{\unitlength}{0.3mm}
-\thicklines
-\begin{center}
-\begin{footnotesize}
-\begin{picture}(250,150)(-100,-20)
-  \put(-100,   0){\line(1,0){200}}
-  \put(   0, -20){\line(0,1){120}}
-  {\color{red}
-    \qbezier(-100,100)(0,-100)(100,100)
-    \put( 100, 105){\makebox(0,0)[b]{$y=x^2$}}
-    }
-  \qbezier[8](-40,0)(-40,8)(-40,16)
-  \qbezier[8](40,0)(40,8)(40,16)
-  \qbezier[28](-80,0)(-80,32)(-80,64)
-  \qbezier[28](80,0)(80,32)(80,64)
-  \qbezier[64](-80,64)(0,64)(80,64)
-  \qbezier[40](-40,16)(0,16)(40,16)
-  \put(   0, 110){\makebox(0,0)[r]{$y$}}
-  \put( 110,   0){\makebox(0,0)[r]{$x$}}
-  \put(  -5,  64){\makebox(0,0)[r]{$y+h$}}
-  \put(  -5,  16){\makebox(0,0)[r]{$y$}}
-  \put( -40,  -5){\makebox(0,0)[t]{$-\sqrt{y}$}}
-  \put(  40,  -5){\makebox(0,0)[t]{$\sqrt{y}$}}
-  \put( -80,  -5){\makebox(0,0)[t]{$-\sqrt{y+h}$}}
-  \put(  80,  -5){\makebox(0,0)[t]{$\sqrt{y+h}$}}
-% \put(  80,  -5){\makebox(0,0)[t]{$\sqrt{y+h}\approx \sqrt{y} + \frac{1}{2\sqrt{y}}h$}}
-  \put( 100,  40){\makebox(0,0)[l]{$\frac{\Delta y}{\Delta x}=\left.\frac{\dy}{\dx}\right|_{x=\sqrt{y}}=2\sqrt{y}$}}
-  \put(  95,  40){\vector(-1,0){35}}
-  \put(-100,  20){\makebox(0,0)[r]{$\sqrt{y}+\frac{\Delta x}{\Delta y}\Delta y = \sqrt{y} - \frac{1}{2\sqrt{y}}h$}}
-  \put( 100,  20){\makebox(0,0)[l]{$\sqrt{y}+\frac{\Delta x}{\Delta y}\Delta y = \sqrt{y} + \frac{1}{2\sqrt{y}}h$}}
-  \put( -95,  15){\vector( 1,-1){15}}
-  \put(  95,  15){\vector(-1,-1){15}}
-  \put(  40,  16){\line(5,6){40}}   %straight line
-  \put( -40,  16){\line(-5,6){40}}   %straight line
-  %{\color{green}\qbezier(40,16)(60,40)(80,64)}     %straight line
-\end{picture}
-\end{footnotesize}
-\end{center}
-\caption{
-  $\rvY=\rvX^2$
-  \label{fig:Y=rvX^2}
-  }
-\end{figure}
 %---------------------------------------
 \begin{corollary}
 \footnote{
@@ -862,106 +682,41 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 \corbox{
   \brb{\rvY=\rvX^2}
   \implies
-  \brb{\ppy(y) = \frac{1}{2\sqrt{y}} \brs{\ppx(-\sqrt{y}) + \ppx( \sqrt{y})}}
+  \brb{\ppy(y) = \frac{1}{2\sqrt{y}} \brs{\ppx\brp{-\sqrt{y}} + \ppx\brp{\sqrt{y}}}}
   }
 \end{corollary}
 \begin{proof}
-%\begin{enumerate}
-%  \item The theorem can also be proved using \prefpp{thm:YfX}:
-    \begin{enumerate}
-      \item The roots of $y=x^2$ are $x_1=-\sqrt{y}$ and $x_2=+\sqrt{y}$. \label{item:YX2_roots}
-      \item The derivative of $\ff(x)\eqd y=x^2$ is $\ff'(x)=2x$. \label{item:YX2_derivative}
-      \item And so it follows that \ldots
-        {\begin{align*}
-          \ppy(y)
-            &= \sum_{n=1}^\xN \frac{\ppx(x_n)}{\abs{\ff'(x_n)}}
-            && \text{by \prefp{thm:YfX}}
-          \\&= \frac{\ppx(x_1)}{|\ff'(x_1)|} + \frac{\ppx(x_2)}{|\ff'(x_2)|}
-            && \text{by definition of $\sum$}
-          \\&= \frac{\ppx(-\sqrt{y})}{|\ff'(-\sqrt{y})|} + \frac{\ppx(\sqrt{y})}{|\ff'(\sqrt{y})|}
-            && \text{by \pref{item:YX2_roots}}
-          \\&= \frac{\ppx(-\sqrt{y})}{2\sqrt{y}} + \frac{\ppx(\sqrt{y})}{2\sqrt{y}}
-            && \text{by \pref{item:YX2_derivative}}
-          \\&=    \left.\left.\frac{1}{2\sqrt{y}}\right[
-                  \ppx(-\sqrt{y}) + \ppx( \sqrt{y}) \right]
-            && \text{by \prope{linearity} of $+$ operation}
-        \end{align*}}
-    \end{enumerate}
-
-%  \item Alternatively
-%    \begin{enumerate}
-%      \item Let $h\to0$.
-%      \item lemma. First we show a useful relation for $\sqrt{y+h	}$.
-%            This relation is illustrated in \prefpp{fig:Y=rvX^2}.
-%            \begin{align*}
-%              \sqrt{y+h}
-%                &=    y_1 + \frac{1}{m} \Delta y
-%              \\&=    \sqrt{y} + \left.\frac{1}{dy/dx}\right|_{x=\sqrt{y}} h
-%              \\&=    \sqrt{y} + \left.\frac{1}{2x}\right|_{x=\sqrt{y}} h
-%              \\&=    \sqrt{y} + \frac{1}{2\sqrt{y}} h
-%            \end{align*}
-%
-%      \item Now, using the above relation, we have
-%            \begin{align*}
-%              \ppy(y)h
-%                &= \psp\setn{y\le Y < y+h}
-%              \\&= \psp\setn{y\le X^2 < y+h}
-%              \\&= \psp\setn{(y\le X^2 < y+h) \land (\rvX<0)}+ \psp\setn{(y\le X^2 < y+h) \land (\rvX\ge0)}
-%              \\&= \psp\setn{y\le X^2 < y+h | X<0}\psp\setn{\rvX<0} + \psp\setn{y\le X^2 < y+h | X\ge0}\psp\setn{\rvX\ge0}
-%              \\&= \psp\setn{-\sqrt{y}\le\rvX < -\sqrt{y+h} | X<0  } \psp\setn{\rvX<0} +
-%                   \psp\setn{+\sqrt{y}\le\rvX < +\sqrt{y+h} | X\ge0} \psp\setn{\rvX\ge0}
-%              \\&= \psp\setn{-\sqrt{y}\le\rvX < -\left(\sqrt{y}+\frac{1}{2\sqrt{y}}h\right) \land X<0   } +
-%                   \psp\setn{+\sqrt{y}\le\rvX <        \sqrt{y}+\frac{1}{2\sqrt{y}}h        \land X\ge0 }
-%              \\&= \psp\setn{-\sqrt{y}\le\rvX < -\left(\sqrt{y}+\frac{1}{2\sqrt{y}}h\right)  } +
-%                   \psp\setn{+\sqrt{y}\le\rvX <        \sqrt{y}+\frac{1}{2\sqrt{y}}h         }
-%              \\&= \frac{1}{2\sqrt{y}}h\ppx(-\sqrt{y})  +
-%                   \frac{1}{2\sqrt{y}}h\ppx( \sqrt{y})
-%            \\\implies
-%              \ppy(y)
-%                &=    \left.\left.\frac{1}{2\sqrt{y}}\right[
-%                       \ppx(-\sqrt{y}) + \ppx( \sqrt{y}) \right]
-%            \end{align*}
-%  \end{enumerate}
-%\end{enumerate}
+  \begin{enumerate}
+    \item lemma: \label{ilem:YX2_ffp}
+          $\ff(x)=x^2$ is a \prope{differentiable function} for $x\in\Real$
+          with $\xN=1$ \prope{critical point}s.
+    \item \label{ilem:YX2_ffi}
+          The inverse of $y=\fg_1(x)=x^2$ for $x\ge0$ is $x=\fgi_1(y)=+\sqrt{y}$ and\\
+          the inverse of $y=\fg_2(x)=x^2$ for $x<0$   is $x=\fgi_2(y)=-\sqrt{y}$.
+    \item The derivative of $\ff(x)=x^2$ is $\ff'(x)=2x$. \label{ilem:YX2_derivative}
+    \item And so it follows that \ldots
+      \begin{align*}
+        \ppy(y)
+          &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
+          && \text{by \prefpp{thm:YfX}}
+        \\&= \frac{\ppx\brp{\fgi_1(y)}}{\abs{\ff'\brp{\fgi_1(y)}}} +
+             \frac{\ppx\brp{\fgi_2(y)}}{\abs{\ff'\brp{\fgi_2(y)}}}
+          && \text{because $\xN=1$ \xref{ilem:YX2_ffp}}
+        \\&= \frac{\ppx\brp{+\sqrt{y}}}{\abs{\ff'\brp{+\sqrt{y}}}}
+           + \frac{\ppx\brp{-\sqrt{y}}}{\abs{\ff'\brp{-\sqrt{y}}}}
+          && \text{by \pref{ilem:YX2_ffi}}
+        \\&= \frac{\ppx\brp{+\sqrt{y}}}{\abs{2\brp{+\sqrt{y}}}}
+           + \frac{\ppx\brp{-\sqrt{y}}}{\abs{2\brp{-\sqrt{y}}}}
+          && \text{by \pref{ilem:YX2_derivative}}
+        \\&= \frac{1}{2\sqrt{y}} \brs{\ppx\brp{-\sqrt{y}} + \ppx\brp{\sqrt{y}}}
+          && \text{by definition of $\absn$}
+      \end{align*}
+  \end{enumerate}
 \end{proof}
 
 \begin{figure}\color{figcolor}
   \centering
   \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/tan.pdf}}}
-%\setlength{\unitlength}{0.15mm}
-%\thicklines
-%\begin{center}
-%\begin{footnotesize}
-%\begin{picture}(1000,220)(-500,-100)
-%  \put(-500,   0){\line(1,0){1000}}
-%  \put(   0, -100){\line(0,1){220}}
-%  \multiput(-400,0)(200,0){5}{
-%    {\color{red}
-%      \qbezier(0,0)(25,25)(50,37)
-%      \qbezier(50,37)(75,50)(95,100)
-%      \qbezier(0,0)(-25,-25)(-50,-37)
-%      \qbezier(-50,-37)(-75,-50)(-95,-100)
-%      }
-%    \qbezier[14](77,0)(77,32)(77,64)
-%    }
-%  \put( 100, 105){\makebox(0,0)[b]{$z=\atan\theta$}}
-%  \put(-400,-5){\makebox(0,0)[t]{$-2\pi$}}
-%  \put(-200,-5){\makebox(0,0)[t]{$- \pi$}}
-%  \put( 200,-5){\makebox(0,0)[t]{$  \pi$}}
-%  \put( 400,-5){\makebox(0,0)[t]{$ 2\pi$}}
-%
-%  \put(-323,-5){\makebox(0,0)[t]{$\theta_{-2}$}}
-%  \put(-123,-5){\makebox(0,0)[t]{$\theta_{-1}$}}
-%  \put(  77,-5){\makebox(0,0)[t]{$\theta_{ 0}$}}
-%  \put( 277,-5){\makebox(0,0)[t]{$\theta_{ 1}$}}
-%  \put( 477,-5){\makebox(0,0)[t]{$\theta_{ 2}$}}
-%
-%  \qbezier[130](-315,64)(77,64)(477,64)
-%  \put(   0, 110){\makebox(0,0)[r]{$z$}}
-%  \put( 520,   0){\makebox(0,0)[l]{$\theta$}}
-%\end{picture}
-%\end{footnotesize}
-%\end{center}
 \caption{
   $\rvZ=\tan\Theta$
   \label{fig:Z=tan0}
