--- a/common/moment_estimation.tex
+++ b/common/moment_estimation.tex
@@ -576,11 +576,11 @@ In software/firmware implementations, recursive forms are very useful and effici
 \label{ex:average_recursive}
 %---------------------------------------
 Let $X \eqd \seqn{1,2,3,4,5}$ be a finite sequence of numbers.
-The \fncte{average} \xref{def:average} of $X$ is 
+The \fncte{average} \xref{def:average} of $X$ is
 \\\indentx$\ds
-  \boxed{\meanest} \eqd \frac{1}{\xN}\sum_{n=1}^\xN x_n 
-                   =    \frac{1}{5}\brp{1+2+3+4+5} 
-                   =    \frac{15}{5} 
+  \boxed{\meanest} \eqd \frac{1}{\xN}\sum_{n=1}^\xN x_n
+                   =    \frac{1}{5}\brp{1+2+3+4+5}
+                   =    \frac{15}{5}
                    =    \boxed{3}
 $.\\
 Using the recursive method of \prefpp{cor:average_recursive} with $\meanest_n \eqd 0$ for all $n\le0$, yields
@@ -634,9 +634,9 @@ Using the recursive method of \prefpp{cor:average_recursive} with $\meanest_n \e
 \label{thm:cmom2_recursive}
 %---------------------------------------
 \thmbox{
-  \cmomest_{2,n} = \frac{n-1}{n}\mcom{\meanest_{2,n-1}}{previous}
+  \cmomest_{2,n} = \frac{n-1}{n}\mcom{\cmomest_{2,n-1}}{previous}
                  + \mcom{\brs{\frac{n-1}{n^2}}}{weight}
-                   \mcom{\brp{ \rvx_n - \meanest_{n-1} }^2}{square error}
+                   \mcom{\brp{ \rvx_n - \cmomest_{n-1} }^2}{square error}
   }
 \end{theorem}
 \begin{proof}
@@ -660,18 +660,58 @@ Using the recursive method of \prefpp{cor:average_recursive} with $\meanest_n \e
 \end{proof}
 
 %---------------------------------------
+\begin{example}
+\label{ex:cmom2_recursive}
+%---------------------------------------
+Let $X \eqd \seqn{1,2,3,4,5}$ be a finite sequence of numbers.
+The \fncte{second central moment estimate} of $X$ is
+\begin{align*}
+  \boxed{\cmomest_2} &\eqd \frac{1}{\xN}\sum_{n=1}^\xN \brp{x_n -\meanest}^2
+                     =    \frac{1}{5}\brs{ (1-3)^2 + (2-3)^2 + (3-3)^2 + (4-3)^2 + (5-3)^2 }
+                  \\&=    \frac{1}{5}\brs{ 4 + 1 + 0 + 1 + 4 }
+                     =    \frac{10}{5}
+                     =    \boxed{2}
+\end{align*}
+Using the recursive method of \prefpp{thm:cmom2_recursive} yields
+\exbox{\begin{array}{l|rclcl clcl clcl cl}
+  n=1 & \cmomest_{2,1} &=& \frac{1-1}{1}\cmomest_{2,0} &+& \frac{1-1}{1^2}\brp{ \rvx_1 - \meanest_0  }^2
+                       &=& 0            \cmomest_{2,0} &+& 0              \brp{ 1      - \meanest_0  }^2
+                      %&=& 0            \cmomest_{2,0} &+& 0
+                       &=& 0\\
+  n=2 & \cmomest_{2,2} &=& \frac{2-1}{2}\cmomest_{2,1} &+& \frac{2-1}{2^2}\brp{ \rvx_2 - \meanest_1  }^2
+                       &=& \frac{1}{2}  0              &+& \frac{1}{4}    \brp{ 2      - 1           }^2
+                      %&=& 0                           &+& \frac{1}{4}\cdot1
+                       &=& \frac{1}{4}\\
+  n=3 & \cmomest_{2,3} &=& \frac{3-1}{3}\cmomest_{2,2} &+& \frac{3-1}{3^2}\brp{ \rvx_3 - \meanest_2  }^2
+                       &=& \frac{2}{3}  \frac{1}{4}    &+& \frac{2}{9}    \brp{ 3      - \frac{3}{2} }^2
+                      %&=& \frac{1}{6}                 &+& \frac{1}{2}
+                       &=& \frac{2}{3}\\
+  n=4 & \cmomest_{2,4} &=& \frac{4-1}{4}\cmomest_{2,3} &+& \frac{4-1}{4^2}\brp{ \rvx_4 - \meanest_3  }^2
+                       &=& \frac{3}{4}  \cdot 1        &+& \frac{3}{16}   \brp{ 4      - 2           }^2
+                      %&=& \frac{3}{4}  \frac{2}{3}    &+& \frac{3}{4}
+                       &=& \frac{5}{4}\\
+  n=5 & \boxed{\cmomest_{2,5}} &=& \frac{5-1}{5}\cmomest_{2,4} &+& \frac{5-1}{5^2}\brp{ \rvx_5 - \meanest_4  }^2
+                       &=& \frac{4}{5}  \frac{5}{4}    &+& \frac{4}{25}   \brp{ 5      - \frac{5}{2} }^2
+                      %&=& 1                           &+& 1
+                       &=& \boxed{2}
+\end{array}}
+\end{example}
+
+%---------------------------------------
 \begin{corollary}
 \label{cor:var_recursive}
 % cross-reference: https://math.stackexchange.com/questions/374881/
 %---------------------------------------
-\corbox{\begin{array}{rc>{\ds}lM}
-  \varest_n &=& \mcom{ \brs{\frac{n-2}{n-1}} \varest_{n-1}            }{weighted previous}
-              + \mcom{      \frac{1}{n}      \brp{ \rvx_n - \meanest_{n-1} }^2 }{weighted squared error}
-              & (\fncte{sample variance estimation})
-             \\
-  \popvarest_n &=& \mcom{ \brs{\frac{n-1}{n}}  \popvarest_{n-1}            }{weighted previous}
-              + \mcom{         \frac{n-1}{n^2} \brp{ \rvx_n - \meanest_{n-1} }^2 }{weighted squared error}
-              & (\fncte{population variance estimation})
+\corbox{\begin{array}{r c>{\ds}l M}
+  \varest_n    %&=& \mcom{\brs{\frac{n}{n-1}}}{\fncte{Bessel's correction}}\cmomest_{2,n}
+               &=& \mcom{ \brs{\frac{n-2}{n-1}} \varest_{n-1}            }{weighted previous}
+                 + \mcom{      \frac{1}{n}      \brp{ \rvx_n - \meanest_{n-1} }^2 }{weighted squared error}
+                 & (\fncte{sample variance estimation})
+                \\
+  \popvarest_n %&=& \cmomest_{2,n}
+               &=& \mcom{ \brs{\frac{n-1}{n}}  \popvarest_{n-1}            }{weighted previous}
+                 + \mcom{         \frac{n-1}{n^2} \brp{ \rvx_n - \meanest_{n-1} }^2 }{weighted squared error}
+                 & (\fncte{population variance estimation})
 \end{array}}
 \end{corollary}
 \begin{proof}
@@ -710,6 +750,31 @@ Using the recursive method of \prefpp{cor:average_recursive} with $\meanest_n \e
   \end{enumerate}
 % Praise the Lord!!!
 \end{proof}
+
+%---------------------------------------
+\begin{example}
+\label{ex:var_recursive}
+%---------------------------------------
+Let $X \eqd \seqn{1,2,3,4,5}$ be a finite sequence of numbers.
+The two standard \fncte{variance} estimates of $X$ are
+\begin{align*}
+  \boxed{\popvarest} &\eqd \frac{1}{\xN}\sum_{n=1}^\xN \brp{x_n -\meanest}^2
+                     =    \frac{1}{5}\brs{ (1-3)^2 + (2-3)^2 + (3-3)^2 + (4-3)^2 + (5-3)^2 }
+                  \\&=    \frac{1}{5}\brs{ 4 + 1 + 0 + 1 + 4 }
+                     =    \frac{10}{5}
+                     =    \boxed{2}
+                     \\
+  \boxed{\varest} &\eqd \frac{1}{\xN-1}\sum_{n=1}^\xN \brp{x_n -\meanest}^2
+                     =    \frac{10}{4}
+                     =    \boxed{2.5}
+\end{align*}
+Using the recursive method of \prefpp{cor:var_recursive} along with results from
+\prefpp{ex:average_recursive} and \prefpp{ex:cmom2_recursive} yields
+\exbox{\begin{array}{ rc>{\ds}lclM}
+  \popvarest_5 &=& \cmomest_{2,5}                     &=& 2    & (\fncte{population variance})\\
+  \varest_5    &=& \brs{\frac{5}{5-1}} \cmomest_{2,5} &=& 2.5  & (\fncte{sample variance})
+\end{array}}
+\end{example}
 
 %---------------------------------------
 \begin{lemma}
