--- a/posts/math-stackexchange-374881_recursive-formula-for-variance.tex
+++ b/posts/math-stackexchange-374881_recursive-formula-for-variance.tex
@@ -1,5 +1,7 @@
 $\newcommand{\ds}{\displaystyle}$
 $\newcommand{\mean}{\mu}$
+$\newcommand{\popvar}{\sigma^2}$
+$\newcommand{\cmom}{\mu}$
 $\newcommand{\meanest}{\hat{\mean}}$
 $\newcommand{\seqn}[1]{\left\{#1\right\}}$
 $\newcommand{\rvx}{x}$
@@ -16,16 +18,17 @@ $\newcommand{\varest}{\hat{\var}}$
 $\newcommand{\popvarest}{\hat{\popvar}}$
 $\newcommand{\mcom}[2]{{\displaystyle\underbrace{\displaystyle#1}_{\text{#2}}}}$
 $\newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}$
+$\newcommand{\bcoef}[2]{{#1\choose#2}}$
 
 An alternative solution using central moments $\ldots$
 
-Estimated Mean in recursive form
---------------------------------
+(1) Estimated Mean in recursive form
+------------------------------------
 Define $\meanest_{n}\eqd 0$ for $n=0$.
 \begin{align*}
   \boxed{\mcom{\meanest_{n}}{new}}
     &\eqd \frac{1}{n} \sum_{k=1}^{n} \rvx_k
-    && \text{by definition of *average*}
+    && \text{by definition of average}
   \\&= \frac{1}{n}\rvx_n + \frac{1}{n} \sum_{k=1}^{n-1} \rvx_k
   \\&= \frac{1}{n}\rvx_n + \frac{n-1}{n}\brs{\frac{1}{n-1} \sum_{k=1}^{n-1} \rvx_k }
   \\&\eqd \frac{1}{n}\rvx_n + \frac{n-1}{n}\meanest_{n-1}
@@ -43,7 +46,7 @@ The *average* of $X$ is $\ds
                    =    \frac{15}{5}
                    =    \boxed{3}
 $.  
-Using the recursive method yields the same result:
+Using the recursive method of (1) yields the same result:
 $\begin{array}{l|rclcl clcl cl}
   n=1 & \meanest_1 &=& \meanest_0   &+& \frac{1}{1}\brp{ \rvx_1 - \meanest_0 }
                    &=& 0            &+&          1 \brp{ 1      - 0          }
@@ -67,7 +70,97 @@ References:
 [Candy (2009) pages 11-12](http://books.google.com/books?vid=ISBN9780470430576&pg=PA11),
 [Candy (2016) pages 12-13](http://books.google.com/books?vid=ISBN9781119125457&pg=PA12)
 
-Estimated order-$p$ Central Moment in recursive form
-----------------------------------------------------
+(2) Estimated order-$p$ Central Moment in recursive form
+--------------------------------------------------------
+\begin{align*}
+  \boxed{\cmomest_{p,n}}
+    &\eqd \frac{1}{n} \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_n }^p
+          \qquad\text{by definition of order-$p$ central moment}
+  \\&=    \frac{1}{n} \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^p
+  \\&=    \frac{1}{n} \sum_{k=1}^{n} \sum_{m=0}^p \bcoef{p}{m} \brs{ \rvx_k - \meanest_{n-1} }^{p-m} \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m
+          \qquad\text{by Binomial Theorem}
+  \\&=    \frac{1}{n} \sum_{m=0}^p \bcoef{p}{m}  \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m  \sum_{k=1}^{n} \brs{ \rvx_k - \meanest_{n-1} }^{p-m}
+  \\&=    \frac{1}{n} \sum_{m=0}^p \bcoef{p}{m}  \brs{ - \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} } }^m
+                      \brs{(n-1)\mcom{\frac{1}{n-1}\sum_{k=1}^{n-1} \brp{ \rvx_k - \meanest_{n-1} }^{p-m}}{$\cmomest_{p-m,n-1}$} + \brp{ \rvx_n - \meanest_{n-1} }^{p-m} }
+  \\&\eqd \boxed{
+          \frac{1}{n} \sum_{m=1}^n \bcoef{p}{m}
+          \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^m
+          \brs{ (n-1) \cmomest_{p-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{p-m} }}
+\end{align*}
 
+(3) A couple useful lemmas
+--------------------------
+\begin{align*}
+  \boxed{\cmomest_0}
+    &\eqd \frac{1}{n} \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_n }^0
+   &&=  \frac{1}{n} \sum_{k=1}^{n} 1
+   &&=  \frac{n}{n}
+   &&=  \boxed{1}
+   &&   \text{(Lemma 0)}
+  \\
+  \boxed{\cmomest_1}
+    &\eqd \frac{1}{n} \sum_{k=1}^{n} \brp{ \rvx_k - \meanest_n }^1
+   &&= \mcom{\brs{\frac{1}{n} \sum_{k=1}^{n} \rvx_k}}{$\meanest_n$} - \brs{\frac{1}{n} \sum_{k=1}^{n} \meanest_n }
+   &&= \meanest_n - \frac{n}{n} \meanest_n
+   &&= \boxed{0}
+   && \text{(Lemma 1)}
+\end{align*}
 
+(4) Estimated 2nd Central Moment in recursive form
+--------------------------------------------------
+\begin{align*}
+\boxed{\cmomest_{2,n}}
+  &= \frac{1}{n}\sum_{m=1}^n \bcoef{2}{m} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^m \brs{ (n-1) \cmomest_{2-m,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{2-m} }
+     \qquad\text{by (2)}
+  \\&= \frac{1}{n}\mcom{\bcoef{2}{0}}{1} 1 \brs{ (n-1) \cmomest_{2,n-1} + \brp{ \rvx_n - \meanest_{n-1} }^{2} } 
+     + \frac{1}{n}\mcom{\bcoef{2}{1}}{2} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }\brs{ (n-1) \mcom{\cmomest_{1,n-1}}{0 by (3)} + \brp{ \rvx_n - \meanest_{n-1} } } 
+     + \frac{1}{n}\mcom{\bcoef{2}{2}}{1} \brs{ -\frac{1}{n}\brp{\rvx_n-\meanest_{n-1}} }^2 \brs{ (n-1) \mcom{\cmomest_{0,n-1}}{1 by (3)} + 1 }
+  \\&= \brs{\frac{n-1}{n} \cmomest_{2,n-1}
+     + \frac{1}{n}\brp{ \rvx_n - \meanest_{n-1} }^2}
+     -\frac{2}{n^2} \brp{ \rvx_n - \meanest_{n-1} }^2 +\frac{1}{n^2} \brp{ \rvx_n - \meanest_{n-1} }^2 \brs{ (n-1) + 1 }
+  \\&= \brs{\frac{n-1}{n}}\cmomest_{2,n-1} + \brs{ \frac{1}{n} - \frac{2}{n^2} + \frac{1}{n^2} } \brp{ \rvx_n - \meanest_{n-1} }^2
+  \\&= \boxed{\brs{\frac{n-1}{n}}\cmomest_{2,n-1} + \brs{ \frac{n-1}{n^2} } \mcom{\brp{ \rvx_n - \meanest_{n-1} }^2}{error squared}}
+\end{align*}
+
+**Example**:
+Let $X \eqd \seqn{1,2,3,4,5}$ be a finite sequence of numbers.
+The 2nd central moment estimate of $X$ is
+\begin{align*}
+  \boxed{\cmomest_2} &\eqd \frac{1}{\xN}\sum_{n=1}^\xN \brp{x_n -\meanest}^2
+                     =    \frac{1}{5}\brs{ (1-3)^2 + (2-3)^2 + (3-3)^2 + (4-3)^2 + (5-3)^2 }
+                  \\&=    \frac{1}{5}\brs{ 4 + 1 + 0 + 1 + 4 }
+                     =    \frac{10}{5}
+                     =    \boxed{2}
+\end{align*}
+Using the recursive method of (4) yields the same result:  
+$\begin{array}{l|rclcl clcl clcl cl}
+  n=1 & \cmomest_{2,1} &=& \frac{1-1}{1}\cmomest_{2,0} &+& \frac{1-1}{1^2}\brp{ \rvx_1 - \meanest_0  }^2
+                       &=& 0            \cmomest_{2,0} &+& 0              \brp{ 1      - \meanest_0  }^2
+                       &=& 0\\
+  n=2 & \cmomest_{2,2} &=& \frac{2-1}{2}\cmomest_{2,1} &+& \frac{2-1}{2^2}\brp{ \rvx_2 - \meanest_1  }^2
+                       &=& \frac{1}{2}  0              &+& \frac{1}{4}    \brp{ 2      - 1           }^2
+                       &=& \frac{1}{4}\\
+  n=3 & \cmomest_{2,3} &=& \frac{3-1}{3}\cmomest_{2,2} &+& \frac{3-1}{3^2}\brp{ \rvx_3 - \meanest_2  }^2
+                       &=& \frac{2}{3}  \frac{1}{4}    &+& \frac{2}{9}    \brp{ 3      - \frac{3}{2} }^2
+                       &=& \frac{2}{3}\\
+  n=4 & \cmomest_{2,4} &=& \frac{4-1}{4}\cmomest_{2,3} &+& \frac{4-1}{4^2}\brp{ \rvx_4 - \meanest_3  }^2
+                       &=& \frac{3}{4}  \cdot 1        &+& \frac{3}{16}   \brp{ 4      - 2           }^2
+                       &=& \frac{5}{4}\\
+  n=5 & \boxed{\cmomest_{2,5}} &=& \frac{5-1}{5}\cmomest_{2,4} &+& \frac{5-1}{5^2}\brp{ \rvx_5 - \meanest_4  }^2
+                       &=& \frac{4}{5}  \frac{5}{4}    &+& \frac{4}{25}   \brp{ 5      - \frac{5}{2} }^2
+                       &=& \boxed{2}
+\end{array}$
+
+(5) Population Variance Estimation
+----------------------------------
+This follows directly from (4) in any of several forms:
+\begin{align*}
+  \popvarest_n
+    &\eqd \cmomest_{2,n}
+   &&= \brs{\frac{n-1}{n}}\popvarest_{2,n-1} + \brs{ \frac{n-1}{n^2} } \brp{ \rvx_n - \meanest_{n-1} }^2
+   \\
+  \popvarest_{m+1}
+    &\eqd \cmomest_{2,m+1}
+   &&= \brs{\frac{m}{m+1}}\popvarest_{2,m} + \brs{ \frac{m}{(m+1)^2} } \brp{ \rvx_{m+1} - \meanest_{m} }^2
+   &&  \text{where $m\eqd n+1$}
+\end{align*}
